--- a/peregruzka/peregruzka.vcxproj
+++ b/peregruzka/peregruzka.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Print.cpp" />
     <ClCompile Include="Shift.cpp" />
     <ClCompile Include="Sort.cpp" />
-    <ClCompile Include="Static.cpp" />
+    <ClCompile Include="Statistic.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h" />
@@ -140,7 +140,7 @@
     <ClInclude Include="Print.h" />
     <ClInclude Include="Shift.h" />
     <ClInclude Include="Sort.h" />
-    <ClInclude Include="Static.h" />
+    <ClInclude Include="Statistic.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
